<resources>
    <string name="app_name">WorkNow</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Emil</string>
    <string name="telephone">Telefono</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="save">Save</string>
    <string name="user">User</string>
    <string name="log_in">Log In</string>
    <string name="donthaveaccount">You do not have an account?</string>
    <string name="signup"> Sign up</string>
</resources>
