<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.worknow.sprinklet.worknow.register"
    android:background="@color/principal_background">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:maxWidth="500dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp">
        <ImageView
            android:id="@+id/img_image_person"
            android:background="@drawable/ic_menu_person"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="25dp"
            android:layout_centerHorizontal="true"/>
        <EditText
            android:id="@+id/txt_first_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/img_image_person"
            android:hint="@string/first_name"
            android:backgroundTint="@color/colorText"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorText"/>
        <LinearLayout
            android:id="@+id/last_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_below="@+id/txt_first_name">
            <EditText
                android:id="@+id/txt_middle_name"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:hint="@string/middle_name"
                android:backgroundTint="@color/colorText"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorText"/>
            <EditText
                android:id="@+id/txt_last_name"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:hint="@string/last_name"            android:backgroundTint="@color/colorText"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorText"/>
        </LinearLayout>
        <EditText
            android:id="@+id/txt_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/last_container"
            android:hint="@string/email"
            android:backgroundTint="@color/colorText"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorText"/>
        <EditText
            android:id="@+id/txt_telephone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/txt_email"
            android:hint="@string/telephone"            android:backgroundTint="@color/colorText"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorText" />
        <EditText
            android:id="@+id/txt_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/txt_telephone"
            android:hint="@string/password"             android:backgroundTint="@color/colorText"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorText"/>
        <Button
            android:layout_width="105dp"
            android:layout_height="50dp"
            android:layout_below="@+id/txt_password"
            android:layout_centerHorizontal="true"
            android:text="@string/save" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
