<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.worknow.sprinklet.worknow.Start"
    tools:showIn="@layout/app_bar_start"
    android:background="@color/principal_background">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:maxWidth="500dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="0dp"
        tools:ignore="MissingConstraints">
        <ImageView
            android:id="@+id/img_image_person"
            android:background="@drawable/ic_menu_person"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="65dp"
            android:layout_centerHorizontal="true"/>
        <EditText
            android:id="@+id/txt_user"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/img_image_person"
            android:hint="@string/user"
            android:backgroundTint="@color/colorText"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorText"/>
        <EditText
            android:id="@+id/txt_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/txt_user"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:backgroundTint="@color/colorText"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorText"/>
        <Button
            android:id="@+id/btn_log_in"
            android:layout_width="105dp"
            android:layout_height="50dp"
            android:layout_below="@+id/txt_password"
            android:layout_centerHorizontal="true"
            android:text="@string/log_in"
            android:onClick="openSession"
            />
        <TextView
            android:id="@+id/btn_sign_up_text"
            android:layout_width="210dp"
            android:layout_height="25dp"
            android:layout_below="@+id/btn_log_in"
            android:layout_marginTop="10dp"
            android:textSize="15dp"
            android:text="@string/donthaveaccount"
            android:textColorLink="@color/colorText"
            android:backgroundTint="@color/colorText"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorText"/>

        <TextView
            android:id="@+id/btn_sign_up"
            android:layout_width="55dp"
            android:layout_height="25dp"
            android:layout_below="@+id/btn_log_in"
            android:layout_toRightOf="@+id/btn_sign_up_text"
            android:layout_marginTop="10dp"
            android:textSize="15dp"
            android:onClick="createAccount"
            android:textColor="@color/colorLink"
            android:text="@string/signup"/>
        </RelativeLayout>
</android.support.constraint.ConstraintLayout>
